rocket/measurements/verilator-small-v1.6-O3/sim-perf.txt
START: Current timestamp in milliseconds: 1731323120630
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.6-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.6-O3-simperf//rocket.sv
/home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.6-O3-simperf//rocket.fir:1:1: error: expected 'FIRRTL'
circuit RocketSystem :
^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.6-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.6-O3-simperf//rocket.sv':

             20.16 msec task-clock:u                     #    0.974 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,239      page-faults:u                    #  111.067 K/sec                     
         8,025,145      cycles:u                         #    0.398 GHz                         (10.95%)
         5,004,296      stalled-cycles-frontend:u        #   62.36% frontend cycles idle        (25.87%)
       136,976,171      instructions:u                   #   17.07  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (40.71%)
        28,327,506      branches:u                       #    1.405 G/sec                       (55.59%)
           433,541      branch-misses:u                  #    1.53% of all branches             (70.47%)
        58,682,424      L1-dcache-loads:u                #    2.911 G/sec                       (74.35%)
         4,942,592      L1-dcache-load-misses:u          #    8.42% of all L1-dcache accesses   (74.13%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,037,717      L1-icache-loads:u                #   51.476 M/sec                       (59.29%)
            10,560      L1-icache-load-misses:u          #    1.02% of all L1-icache accesses   (44.41%)
            63,770      dTLB-loads:u                     #    3.163 M/sec                       (29.53%)
            16,842      dTLB-load-misses:u               #   26.41% of all dTLB cache accesses  (14.70%)
     <not counted>      iTLB-loads:u                                                            (0.00%)
     <not counted>      iTLB-load-misses:u                                                      (0.00%)
     <not counted>      L1-dcache-prefetches:u                                                  (0.00%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.020698148 seconds time elapsed

       0.014709000 seconds user
       0.005896000 seconds sys


Some events weren't counted. Try disabling the NMI watchdog:
	echo 0 > /proc/sys/kernel/nmi_watchdog
	perf stat ...
	echo 1 > /proc/sys/kernel/nmi_watchdog
GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket.sv.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.6-O3-simperf/rocket.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.6-O3-simperf//rocket-vtor /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.6-O3-simperf//rocket.sv /home/bea/Research/paper-evals/arc-tests/rocket/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             66.19 msec task-clock:u                     #    1.590 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,246      page-faults:u                    #   64.147 K/sec                     
       136,224,418      cycles:u                         #    2.058 GHz                         (59.24%)
        19,532,366      stalled-cycles-frontend:u        #   14.34% frontend cycles idle        (59.24%)
       108,285,137      instructions:u                   #    0.79  insn per cycle            
                                                  #    0.18  stalled cycles per insn     (59.20%)
        77,076,663      branches:u                       #    1.164 G/sec                       (19.57%)
         1,959,140      branch-misses:u                  #    2.54% of all branches             (38.03%)
       105,586,676      L1-dcache-loads:u                #    1.595 G/sec                       (43.54%)
         2,368,261      L1-dcache-load-misses:u          #    2.24% of all L1-dcache accesses   (43.58%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        29,342,801      L1-icache-loads:u                #  443.302 M/sec                       (43.55%)
           432,793      L1-icache-load-misses:u          #    1.47% of all L1-icache accesses   (43.55%)
           564,977      dTLB-loads:u                     #    8.536 M/sec                       (43.61%)
            19,398      dTLB-load-misses:u               #    3.43% of all dTLB cache accesses  (43.61%)
           746,348      iTLB-loads:u                     #   11.276 M/sec                       (43.74%)
            14,961      iTLB-load-misses:u               #    2.00% of all iTLB cache accesses  (63.85%)
           760,401      L1-dcache-prefetches:u           #   11.488 M/sec                       (59.79%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.041636196 seconds time elapsed

       0.045707000 seconds user
       0.019894000 seconds sys


GROUP: verilator SUBGROUP: clang
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
